--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                 <label for="inputName">Name</label>
                 <input type="text" class="form-control mb-4" id="inputName" placeholder="Name">
                 <label for="inputName">Email Address</label>
-                <input type="text" class="form-control mb-4" id="inputName" placeholder="Name">
+                <input type="text" class="form-control mb-4" id="inputEmail" placeholder="Email">
                 <label for="contactMessage">Message</label>
                 <div class="input-group flex-nowrap">
                     <div class="input-group-prepend">
