--- a/shop.html
+++ b/shop.html
@@ -48,11 +48,11 @@
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
-          <h4 class="alert-heading">Well done!</h4>
+          <h4 class="alert-heading">Welcome!</h4>
           
-          <p>Aww yeah, you successfully read this important alert message. This example text is going to run a bit longer so that you can see how spacing within an alert works with this kind of content.</p>
+          <p>Don't forget to user today's discount code at checkout! </p>
           <hr>
-          <p class="mb-0">Whenever you need to, be sure to use margin utilities to keep things nice and tidy.</p>
+          <p class="mb-0">Discount Code of The Day: DGM2780 </p>
 
         </div>
     </div>
@@ -72,7 +72,7 @@
                 <div class="card-body">
                   <h5 class="card-title">Embrace Spring</h5>
                   <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi placeat veniam dolore.</p>
-                  <a href="#" class="btn btn-primary"data-toggle="btn" >Add to Cart</a>
+                  <a href="#" class="btn btn-primary"  >Add to Cart</a>
                 </div>
               </div>     
         </div>
